# traj

./: LICENSE  README.md  pyproject.toml
examples/: examples.ipynb  examples.py
src/traj/: dist.py  utils.py
